# takakia

./: .gitignore  LICENSE  README.md  install.ps1  install.sh  pyproject.toml
src/takakia/: __init__.py  cli.py  config.py  l10n.py  main.py  session.py  wizard.py
src/takakia/profiles/: __init__.py  general.md  study.md  translation.md  writing.md
src/takakia/providers/: base.py  compatible.py  factory.py  google.py
tests/: __init__.py  test_config.py  test_profiles.py  test_provider.py  test_session.py
