[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "takakia"
dynamic = ["version"]
description = "A lightweight, lightning-fast command-line AI chat interface optimized for low-end hardware."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Utilities",
]
dependencies = [
    "httpx>=0.27.0",
    "rich>=13.7.0",
    "platformdirs>=4.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
# O comando binário global foi atualizado para combinar com o novo nome do projeto
takakia = "takakia.main:main"

[tool.hatch.version]
path = "takakia/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["takakia"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]