[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "takakia"
dynamic = ["version"]
description = "A lightweight command-line AI chat interface optimized for older or low-spec hardware."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Utilities",
]
dependencies = [
    "httpx>=0.27.0",
    "rich>=13.7.0",
    "platformdirs>=4.2.0",
    "prompt-toolkit>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
# The global binary command was updated to match the new project name
takakia = "takakia.main:main"

[tool.hatch.version]
# Updated to point to the file inside the src/ folder
path = "src/takakia/__init__.py"

[tool.hatch.build.targets.wheel]
# Updated to include packages starting from the src/ folder
packages = ["src/takakia"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
